# acorn-quantconnect

./: .gitignore  README.md  lean.json  pyproject.toml
reports/: report.html
starter_system/: chart.py  config.json  main.py  research.ipynb  run_many.sh
